contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@ ul li {
     padding-bottom: 5px;
 }
 a {
-    color: rgb(4, 17, 4);
+    color: rgb(20, 9, 110);
 }
 a:active {
     color: tomato;
